# cloud-cost-analyzer

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_KEYS_GUIDE.md  CONFIG.md  DOCKER.md  Dockerfile  MULTI_CLOUD_SETUP.md  Makefile  OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SCHEDULE_SETUP.md  advise.md  aws_cost_analyzer  aws_cost_analyzer.py  cloud_cost_analyzer.py  config.example.json  config.json  config.optimized.json  create_beautiful_charts.py  create_beautiful_dashboard.py  custom_analysis_2025-08-01_to_2025-09-05.txt  demo_enhanced_analyzer.py  deploy_to_github.sh  docker-compose.yml  manage_schedule.sh  product_guide.py  pyproject.toml  quick_analysis_report.txt  requirements.txt  setup.py  setup_github.sh  show_improvements.py  start.sh  test_async.py  test_cache.py  test_monitoring.py  (+3 more)
.github/workflows/: ci.yml
enterprise/: .env.example  README.md  docker-compose.yml  enterprise_demo.py  install_complete_platform.sh  quick-start.py  start.sh
enterprise/backend/: Dockerfile  main.py  requirements.txt
enterprise/backend/core/: config.py
enterprise/backend/models/: __init__.py  base.py  business_intelligence.py  cloud_account.py  organization.py
enterprise/backend/services/: cost_allocation.py  optimization_engine.py  real_cloud_api.py  real_time_monitoring.py
enterprise/demo/: product_capabilities_demo.py
enterprise/frontend/: Dockerfile  admin.html  app.html  index.html  nginx.conf  package.json  simple.html
enterprise/frontend/src/: App.tsx
enterprise/frontend/src/pages/BusinessIntelligence/: BusinessIntelligence.tsx
enterprise/frontend/src/pages/Dashboard/: Dashboard.tsx
enterprise/monitoring/prometheus/: prometheus.yml
enterprise/nginx/: nginx.conf
examples/: optimized_usage.py
src/aws_cost_analyzer/core/: analyzer.py  async_analyzer.py  client.py  cost_optimizer.py  data_processor.py  tencent_client.py  tencent_data_processor.py
src/aws_cost_analyzer/notifications/: feishu.py
src/aws_cost_analyzer/reports/: chart_generator.py  html_report.py
src/aws_cost_analyzer/utils/: cache.py  config.py  config_wizard.py  exceptions.py  logger.py  progress.py  validators.py
src/cloud_cost_analyzer/: __main__.py
src/cloud_cost_analyzer/cache/: manager.py  providers.py  tiered_cache.py
src/cloud_cost_analyzer/cli/: __init__.py  commands.py
src/cloud_cost_analyzer/core/: aliyun_client.py  aliyun_data_processor.py  analyzer.py  async_analyzer.py  async_clients.py  base.py  base_data_processor.py  client.py  cost_optimizer.py  data_processor.py  enhanced_async_analyzer.py  multi_cloud_analyzer.py  tencent_data_processor.py  volcengine_client.py  volcengine_data_processor.py
src/cloud_cost_analyzer/models/: __init__.py  cost_models.py
src/cloud_cost_analyzer/monitoring/: __init__.py  metrics.py  metrics_collector.py
src/cloud_cost_analyzer/notifications/: email.py  manager.py
src/cloud_cost_analyzer/reports/: generator.py  text_report.py
src/cloud_cost_analyzer/utils/: config.py  exceptions.py  logger.py  performance.py  retry.py  secure_logger.py  security.py
src/utils/: config.py  settings.py
tests/: conftest.py  test_async_clients.py  test_aws_analyzer.py  test_cache.py  test_cloud_clients.py  test_config.py  test_integration.py  test_multi_cloud_analyzer.py  test_security.py  test_utils.py  test_validators.py
